--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 					<p>Mapbox: What is it?</p>
 					<p> Mapbox is an open source mapping program.</p>
 					<p> Requires creating an account. </p>
-					<img src="img/mapbox.jpg" alt="" class="center" width="350px" height="350"/>
+					<img src="img/Mapbox.jpg" alt="" class="center" width="350px" height="350"/>
 					
 				</section>
 				<section>
