--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 				</section>
 				<section>
 					<p>Further links</p>
-					<a href="url""font-size:30px;"> https://www.blogs.hss.ed.ac.uk/tools-of-the-trade/use-gis-humanities-social-sciences/</a>
-					<br><a href="url""font-size:30px;"> https://libguides.wustl.edu/c.php?g=46935&p=4435069</a>
-					<br><a href="url""font-size:30px;"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
-					<br><a href="url""font-size:30px;"> https://www.gisforscience.com/</a>
+					<a href="https://www.blogs.hss.ed.ac.uk/tools-of-the-trade/use-gis-humanities-social-sciences/""font-size:20px;">Tools </a>
+					<br><a href="url""font-size:20px;"> https://libguides.wustl.edu/c.php?g=46935&p=4435069</a>
+					<br><a href="url""font-size:20px;"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
+					<br><a href="url""font-size:20px;"> https://www.gisforscience.com/</a>
 				</section>
 				<section>
 					<p>Why QGIS</p>
