--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section>
 					<p>Goals of this workshop</p>
 					<p style="font-size:30px;">By the end of the program we will have something like this:</p>
-					<a href="url""font-size:30px;"> https://visualizela.github.io/flaneur/</a>
+					<a href="https://visualizela.github.io/flaneur/""font-size:30px;"> https://visualizela.github.io/flaneur/</a>
 					<img src="img/BoyleHeights.png" alt="" class="center" width="600px" height="400"/>
 				</section>									
 				<section>
@@ -65,10 +65,10 @@
 				</section>
 				<section>
 					<p>Further links</p>
-					<a href="https://www.blogs.hss.ed.ac.uk/tools-of-the-trade/use-gis-humanities-social-sciences/""font-size:20px;">Tools </a>
-					<br><a href="url""font-size:20px;"> https://libguides.wustl.edu/c.php?g=46935&p=4435069</a>
-					<br><a href="url""font-size:20px;"> https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/</a>
-					<br><a href="url""font-size:20px;"> https://www.gisforscience.com/</a>
+					<a href="https://www.blogs.hss.ed.ac.uk/tools-of-the-trade/use-gis-humanities-social-sciences/""font-size:20px;">What use is GIS for the humanities and social sciences?</a>
+					<br><a href="https://libguides.wustl.edu/c.php?g=46935&p=4435069""font-size:20px;">Humanities Projects using GIS</a>
+					<br><a href="https://gis.usc.edu/blog/the-application-of-geographic-and-information-science-gis-in-earth-sciences/""font-size:20px;"> The Application of Geographic Information Science in Earth Sciences</a>
+					<br><a href="https://www.gisforscience.com/""font-size:20px;"> GIS for Science</a>
 				</section>
 				<section>
 					<p>Why QGIS</p>
@@ -209,7 +209,7 @@
 					<p>QGIS to GitHub</p>
 					<p>You can follow the tutorial below if you wish to just upload the map to a GitHub website without any additional data.</p>
 					<br>
-					<a href="url"> https://maptimela.github.io/map-website/</a>
+					<a href="https://maptimela.github.io/map-website/"> https://maptimela.github.io/map-website/</a>
 				</section>
 				<section>
 					<p>Mapbox: What is it?</p>
