--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				</section>
 				<section>
 					<p style="font-size:80px;">Contents</p>
+					<a href="https://visualizela.github.io/Workshop/#/2">Test</a>
 					<li>What/Who this program is for?</li>
 					<li>What is GIS?</li>
 					<li>The Workshop</li>
