--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 				<section>
 					<p style="font-size:80px;">Contents</p>
 					<a href="https://visualizela.github.io/Workshop/#/2"><li>What/Who this program is for?</li></a>
-					<li>What/Who this program is for?</li>
-					<li>What is GIS?</li>
-					<li>The Workshop</li>
-					<li>Georeferencing</li>
-					<li>Geomerging</li>
-					<li>GitHub</li>
-					<li>Mapbox</li>
-					<li>Flaneur Publishing</li>
+					<a href="https://visualizela.github.io/Workshop/#/4"><li>What is GIS?</li></a>
+					<a href="https://visualizela.github.io/Workshop/#/9"><li>The Workshop</li></a>
+					<a href="https://visualizela.github.io/Workshop/#/15"><li>Georeferencing</li></a>
+					<a href="https://visualizela.github.io/Workshop/#/17"><li>Geomerging</li></a>
+					<a href="https://visualizela.github.io/Workshop/#/19"><li>GitHub</li></a>
+					<a href="https://visualizela.github.io/Workshop/#/23"><li>Mapbox</li></a>
+					<a href="https://visualizela.github.io/Workshop/#/26"><li>Flaneur Publishing</li>
 				</section>
 				<section>
 					<p>Who/What is this program for?</p>
