--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<a href="https://visualizela.github.io/Workshop/#/17"><li>Geomerging</li></a>
 					<a href="https://visualizela.github.io/Workshop/#/19"><li>GitHub</li></a>
 					<a href="https://visualizela.github.io/Workshop/#/23"><li>Mapbox</li></a>
-					<a href="https://visualizela.github.io/Workshop/#/26"><li>Flaneur Publishing</li>
+					<a href="https://visualizela.github.io/Workshop/#/26"><li>Flaneur Publishing</li></a>
 				</section>
 				<section>
 					<p>Who/What is this program for?</p>
