--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<section>
 					<p>Goals of this workshop</p>
 					<p style="font-size:30px;">By the end of the program we will have something like this:</p>
-					<a href="https://visualizela.github.io/flaneur/""font-size:30px;"> https://visualizela.github.io/planningdocs/</a>
+					<a href="https://visualizela.github.io/planningdocs/""font-size:30px;"> https://visualizela.github.io/planningdocs/</a>
 					<img src="img/BoyleHeights.png" alt="" class="center" width="600px" height="400"/>
 				</section>									
 				<section>
