--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Once this has been accomplished go to the area which we will be adding map infor
 					<section><p>Flaneur</p>
 					<img src="img/Flaneur.png" alt="" class="center" width="350px" height="100"/>
 					<p style="font-size:30px;"> Copy this repository into your own by clicking the clone or download button: <br>
-					<a href="url" "font-size: 30px;"> https://github.com/kirschbombe/flaneur</a>	
+					<a href="https://github.com/kirschbombe/flaneur" "font-size: 30px;"> https://github.com/kirschbombe/flaneur </a>	
 					<br>
 					<p style="font-size:20px;">You can either import this repository or you can take the files and add them into the one that you created.
 					<br>
